--- a/08_-_LET/index.html
+++ b/08_-_LET/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript: VAR</title>
+    <title>Javascript: LET</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
 </head>
 <body>
 
-    <h1>Javascript: VAR</h1>
+    <h1>Javascript: LET</h1>
 
     <div id="texto"></div>
     
