--- a/16_-_FUNCOES/index.html
+++ b/16_-_FUNCOES/index.html
@@ -12,8 +12,26 @@
 
     <h1>Javascript: Funções</h1>
 
+    <br>
+
+    <H3>EXEMPLO 01</H3>
     <p id="texto1"></p>
     <p id="texto2"></p>
+
+    <br>
+
+    <h3>EXEMPLO 02</h3>
+    <p>ALERTA NA PÁGINA USANDO A FUNÇÃO "realParaDolar" CRIADA NO ARQUIVO JS </p>
+
+    <br>
+
+    <h3>EXEMPLO 03</h3>
+    <button onclick="alertaHello()">CLIQUE AQUI E VEJA A MENSAGEM</button>
+
+    <br> <br> <br>
+
+    <h3>EXEMPLO 04</h3>
+    <p>ALERTA NA PÁGINA USANDO A FUNÇÃO "paraCelsius" CRIADA NO ARQUIVO JS </p>
     
 </body>
 </html>
