--- a/18_-_EVENTOS/01_-_ONCLICK/index.html
+++ b/18_-_EVENTOS/01_-_ONCLICK/index.html
@@ -14,5 +14,9 @@
 
     <button onclick="evento_Click()">CLIQUE AQUI</button>
 
+    <br><br><br>
+    
+    <img id="natura" src="./assets/imagens/natura.jpeg" alt="">
+
 </body>
 </html>
