--- a/18_-_EVENTOS/03_-_ONMOUSEOVER/index.html
+++ b/18_-_EVENTOS/03_-_ONMOUSEOVER/index.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript - Ondblclick</title>
+    <title>Javascript - Onmouseover</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
 </head>
 <body>
 
-    <h1>Javascript: Ondblclick</h1>
+    <h1>Javascript: Onmouseover</h1>
 
-    <br><br>
+    <br>
 
-    <button ondblclick="evento_Ondblclick()">CLIQUE AQUI</button>
-
-    <br> <br>
-
-    <img id="carrefour" src="./assets/imagens/carrefour.jpg" alt="">
+    <div id="teste" onmouseover="vira_verde()"><img id="tim" src="./assets/imagens/tim.webp" alt=""></div>
 
 </body>
 </html>
