--- a/00_-_JS_INTERNO/index.html
+++ b/00_-_JS_INTERNO/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Javascript Interno</h1>
+    <h1 style="text-align: center;">Javascript Interno</h1>
 
     <!-- Código Javascript dentro do código HTML -->
     <script>
