--- a/20_-_METODOS_PARA_ARRAYS/11_-_MAIOR_E_MENOR_NUMERO/index.html
+++ b/20_-_METODOS_PARA_ARRAYS/11_-_MAIOR_E_MENOR_NUMERO/index.html
@@ -4,15 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript - Arrays (Maior número)</title>
+    <title>Javascript - Arrays (Maior e Menor número)</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
 </head>
 <body>
 
-    <h1>Javascript - Arrays (Maior número da lista)</h1>
-  
+    <h1>Javascript - Arrays (Maior e Menor número da lista)</h1>
+    
+    <br>
+
+    <h4>MAIOR NÚMERO DA LISTA</h4>
+
     <p id="teste"></p>
+
+    <br>
+
+    <h4>MENOR NÚMERO DA LISTA</h4>
+
+    <p id="teste2"></p>
     
 </body>
 </html>
