--- a/03_-_DOCUMENT_WRITE/index.html
+++ b/03_-_DOCUMENT_WRITE/index.html
@@ -5,12 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS: Document.write</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-    <style>
-        h1, p{
-            text-align: center;
-        }
-    </style>
 <body>
 
     <h1>Javascript: document.write</h1>
