--- a/23_-_LACO_DE_REPETICAO_FOR/index.html
+++ b/23_-_LACO_DE_REPETICAO_FOR/index.html
@@ -12,7 +12,13 @@
 
     <h1>Javascript: Laço de Repetição FOR</h1>
     
-    <p id="teste"></p>
+    <h3>EXEMPLO 01 - LAÇO DE REPETIÇÃO (ATÉ CHEGAR A 100)</h3><p id="teste"></p> <br> <br>
+
+    <h3>EXEMPLO 02 - </h3>
+
+    <select name="" id="ano">
+        <option selected disabled>Selecione o ano</option>
+    </select>
 
 </body>
 </html>
