--- a/24_-_EVENTOS_DE_TEMPO/03_-_SETINTERVAL/index.html
+++ b/24_-_EVENTOS_DE_TEMPO/03_-_SETINTERVAL/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <h1>Controle de Tempo - setInterval</h1>
+    <h1>Controle de Tempo - setInterval e clearInterval</h1>
     <h2 id="tempo">0</h2>
     <button onclick="ativarContagem()" class="start">Ativar Contagem</button>
     <button onclick="pararContagem()" class="stop">Parar Contagem</button>
