--- a/24_-_EVENTOS_DE_TEMPO/03_-_SETINTERVAL/index.html
+++ b/24_-_EVENTOS_DE_TEMPO/03_-_SETINTERVAL/index.html
@@ -15,5 +15,13 @@
     <button onclick="ativarContagem()" class="start">Ativar Contagem</button>
     <button onclick="pararContagem()" class="stop">Parar Contagem</button>
     
+    <br><br><br>
+
+    <h2>CONTAGEM REGRESSIVA</h2>
+
+    <h2 id="tempo1">10</h2>
+    <button onclick="ativarContagem1()" class="start">Ativar Contagem</button>
+    <button onclick="pararContagem1()" class="stop">Parar Contagem</button>
+
 </body>
 </html>
