--- a/13_-_EVENTOS/07_-_ONMOUSEUP/index.html
+++ b/13_-_EVENTOS/07_-_ONMOUSEUP/index.html
@@ -11,7 +11,8 @@
 <body onmouseup="alert('clicou na tela')">
 
     <h1>Javascript: Onmouseup</h1>
-   
 
+    <p>ONMOUSEUP -> Disparado quando o clique do botão é liberado.</p>
+   
 </body>
 </html>
