--- a/13_-_EVENTOS/06_-_ONMOUSEDOWN/index.html
+++ b/13_-_EVENTOS/06_-_ONMOUSEDOWN/index.html
@@ -11,6 +11,8 @@
 <body onmousedown="alert('clicou na tela')">
 
     <h1>Javascript: Onmousedown</h1>
+
+    <p>ONMOUSEDOWN -> Disparado quando o clique do botão foi pressionado.</p>
    
 </body>
 </html>
