--- a/13_-_EVENTOS/10_-_ONBLUR/index.html
+++ b/13_-_EVENTOS/10_-_ONBLUR/index.html
@@ -12,6 +12,8 @@
 
     <h1>Javascript: Onblur</h1>
 
+    <h4>ONBLUR -> Disparado quando o elemento perde o foco.</h4>
+
     <input onblur="eventoClick()" type="text" value="UTILIZANDO O ONBLUR">
 
 </body>
