--- a/13_-_EVENTOS/11_-_ONLOAD/index.html
+++ b/13_-_EVENTOS/11_-_ONLOAD/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript - Onkeydown</title>
+    <title>Javascript - Onload</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
 </head>
-<body>
+<body onload="alert('TERMINOU DE CARREGAR')">
 
-    <h1>Javascript: Onkeydown</h1>
+    <h1>Javascript: Onload</h1>
 
-    <input onkeydown="teclaPressionada()" type="text" id="campoTexto">
+    <p>ONLOAD -> Disparado quando a página terminou de ser carregada.</p>
 
 </body>
 </html>
