--- a/14_-_ARRAYS/index.html
+++ b/14_-_ARRAYS/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 
-    <h1>Javascript - Arrays</h1>
+    <h1>Javascript - Arrays</h1> <br>
+
+    <h3>EXEMPLO DE ARRAYS</h3>
+
+    <p id="lista"></p>
     
 </body>
 </html>
