--- a/15_-_METODOS_PARA_ARRAYS/07_-_CONCAT/index.html
+++ b/15_-_METODOS_PARA_ARRAYS/07_-_CONCAT/index.html
@@ -12,7 +12,7 @@
 
     <h1>Javascript - Arrays (Concat)</h1>
 
-    <h4>JUNÇÃO DE DUAS LISTA EM UMA SÓ</h4>
+    <h4>JUNÇÃO DE DUAS LISTAS EM UMA SÓ</h4>
     
     <p id="teste"></p>
     
